# ch-lex-bot-frontend

./: .gitignore  README.md  TODO.txt  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
resources/locale/de/LC_MESSAGES/: messages.po
resources/locale/en/LC_MESSAGES/: messages.po
resources/locale/fr/LC_MESSAGES/: messages.po
resources/locale/it/LC_MESSAGES/: messages.po
scripts/: bot.py  build.py  streamlit_app.py  temp.py
src/: chatbot.py  handlers.py  helpers.py  i18n.py  lang.py  runbot.py
